add hamburger menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     <div class="top">
         <div class="top__header">
             <div class="top__header--title"><img src="img/logo.png" alt=""></div>
-            <div class="top__header--menu-btn"></div>
+            <div class="top__header--menu-btn">
+                <input type="checkbox" id="menu-btn-check">
+                <label for="menu-btn-check" class="top__header--menu-btn--btn"><span></span></label>
+                <!--ここからメニュー-->
+                <div class="menu-content">
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Menu</a>
+                        </li>
+                        <li>
+                            <a href="#">Access</a>
+                        </li>
+                        <li>
+                            <a href="#">Recruit</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--ここまでメニュー-->
+            </div>
             <div class="top__header--main-contents">
                 <div class="top__header--main-content top__header--main-content1">Coffee <small>&</small> Flower</div>
                 <div class="top__header--main-content top__header--main-content2">コーヒーとお花のカフェ</div>
