--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
         <div class="top__footer">
             <div class="top__footer--contents">
-                <div class="top__footer--content top__footer--content1">Home</div>
-                <div class="top__footer--content top__footer--content2">Menu</div>
-                <div class="top__footer--content top__footer--content3">Access</div>
-                <div class="top__footer--content top__footer--content4">Recruit</div>
+                <div class="top__footer--content top__footer--content1"><a href="">Home</a></div>
+                <div class="top__footer--content top__footer--content2"><a href="">Menu</a></div>
+                <div class="top__footer--content top__footer--content3"><a href="">Access</a></div>
+                <div class="top__footer--content top__footer--content4"><a href="">Recruit</a></div>
             </div>
             <div class="top__footer--copyright">© FlowerCafe</div>
         </div>
