modify split footer css into separate files

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
             <div class="top__main--image"><img src="img/concept_sp.png" alt=""></div>
         </div>
 
-        <div class="top__footer">
-            <div class="top__footer--contents">
-                <div class="top__footer--content top__footer--content1"><a href="">Home</a></div>
-                <div class="top__footer--content top__footer--content2"><a href="">Menu</a></div>
-                <div class="top__footer--content top__footer--content3"><a href="">Access</a></div>
-                <div class="top__footer--content top__footer--content4"><a href="">Recruit</a></div>
+        <div class="footer">
+            <div class="footer--contents">
+                <div class="footer--content footer--content1"><a href="">Home</a></div>
+                <div class="footer--content footer--content2"><a href="">Menu</a></div>
+                <div class="footer--content footer--content3"><a href="">Access</a></div>
+                <div class="footer--content footer--content4"><a href="">Recruit</a></div>
             </div>
-            <div class="top__footer--copyright">© FlowerCafe</div>
+            <div class="footer--copyright">© FlowerCafe</div>
         </div>
     </div>
 </body>
