fix link to url

--- a/access.html
+++ b/access.html
@@ -19,24 +19,24 @@
                 <div class="menu-content">
                     <ul>
                         <li>
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="#">Menu</a>
+                            <a href="menu.html">Menu</a>
                         </li>
                         <li>
-                            <a href="#">Access</a>
+                            <a href="access.html">Access</a>
                         </li>
                         <li>
-                            <a href="#">Recruit</a>
+                            <a href="recruit.html">Recruit</a>
                         </li>
                     </ul>
                 </div>
                 <!--ここまでメニュー-->
             </div>
             <div class="common__header--main-contents">
-                <div class="common__header--main-content common__header--main-content1">Menu</div>
-                <div class="common__header--main-content common__header--main-content2">メニュー</div>
+                    <div class="common__header--main-content common__header--main-content1">Menu</div>
+                    <div class="common__header--main-content common__header--main-content2">メニュー</div>
             </div>
         </div>
 
@@ -63,10 +63,10 @@
 
         <div class="footer">
             <div class="footer--contents">
-                <div class="footer--content footer--content1"><a href="">Home</a></div>
-                <div class="footer--content footer--content2"><a href="">Menu</a></div>
-                <div class="footer--content footer--content3"><a href="">Access</a></div>
-                <div class="footer--content footer--content4"><a href="">Recruit</a></div>
+                <div class="footer--content footer--content1"><a href="index.html">Home</a></div>
+                <div class="footer--content footer--content2"><a href="menu.html">Menu</a></div>
+                <div class="footer--content footer--content3"><a href="access.html">Access</a></div>
+                <div class="footer--content footer--content4"><a href="recruit.html">Recruit</a></div>
             </div>
             <div class="footer--copyright">© FlowerCafe</div>
         </div>
