--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 <div class="menu-content">
                     <ul>
                         <li>
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="#">Menu</a>
+                            <a href="menu.html">Menu</a>
                         </li>
                         <li>
-                            <a href="#">Access</a>
+                            <a href="access.html">Access</a>
                         </li>
                         <li>
-                            <a href="#">Recruit</a>
+                            <a href="recruit.html">Recruit</a>
                         </li>
                     </ul>
                 </div>
@@ -64,10 +64,10 @@
 
         <div class="footer">
             <div class="footer--contents">
-                <div class="footer--content footer--content1"><a href="">Home</a></div>
-                <div class="footer--content footer--content2"><a href="">Menu</a></div>
-                <div class="footer--content footer--content3"><a href="">Access</a></div>
-                <div class="footer--content footer--content4"><a href="">Recruit</a></div>
+                <div class="footer--content footer--content1"><a href="index.html">Home</a></div>
+                <div class="footer--content footer--content2"><a href="menu.html">Menu</a></div>
+                <div class="footer--content footer--content3"><a href="access.html">Access</a></div>
+                <div class="footer--content footer--content4"><a href="recruit.html">Recruit</a></div>
             </div>
             <div class="footer--copyright">© FlowerCafe</div>
         </div>
