fix access header text

--- a/access.html
+++ b/access.html
@@ -35,8 +35,8 @@
                 <!--ここまでメニュー-->
             </div>
             <div class="common__header--main-contents">
-                    <div class="common__header--main-content common__header--main-content1">Menu</div>
-                    <div class="common__header--main-content common__header--main-content2">メニュー</div>
+                <div class="common__header--main-content common__header--main-content1">Access</div>
+                <div class="common__header--main-content common__header--main-content2">アクセス</div>
             </div>
         </div>
 
