add index.html for pc

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                     わたくしはすぐ宿直という名前で月賦で買った小さな蓄音器と二十枚ばかりのレコードをもって、その番小屋にひとり住むことになりました。
                 </div>
             </div>
-            <div class="top__main--image"><img src="img/concept_sp.png" alt=""></div>
+            <div class="top__main--image">
+                <img src="img/concept_sp.png" alt="" class="sp">
+                <img src="img/concept_pc.png" alt="" class="pc">
+            </div>
         </div>
 
         <div class="footer">
