--- a/menu.html
+++ b/menu.html
@@ -41,32 +41,38 @@
 
         <div class="menu__main">
             <div class="menu__main--content">
-                <img src="img/menu-coffee.png" alt="">
+                <img class="sp" src="img/menu-coffee.png" alt="">
+                <img class="pc" src="img/menu-coffee-pc.png" alt="">
                 <p class="menu__main--content--product-name">コーヒー</p>
                 <p class="menu__main--content--price">¥500</p>
             </div>
             <div class="menu__main--content">
-                <img src="img/menu-cafe-latte.png" alt="">
+                <img class="sp" src="img/menu-cafe-latte.png" alt="">
+                <img class="pc" src="img/menu-cafe-latte-pc.png" alt="">
                 <p class="menu__main--content--product-name">カフェラテ</p>
                 <p class="menu__main--content--price">¥500</p>
             </div>
             <div class="menu__main--content">
-                <img src="img/menu-flower-coffee.png" alt="">
+                <img class="sp" src="img/menu-flower-coffee.png" alt="">
+                <img class="pc" src="img/menu-flower-coffee-pc.png" alt="">
                 <p class="menu__main--content--product-name">フラワーコーヒー</p>
                 <p class="menu__main--content--price">¥1,000</p>
             </div>
             <div class="menu__main--content">
-                <img src="img/menu-flower-pudding.png" alt="">
+                <img class="sp" src="img/menu-flower-pudding.png" alt="">
+                <img class="pc" src="img/menu-flower-pudding-pc.png" alt="">
                 <p class="menu__main--content--product-name">フラワープリン</p>
                 <p class="menu__main--content--price">¥1,000</p>
             </div>
             <div class="menu__main--content">
-                <img src="img/menu-flower.png" alt="">
+                <img class="sp" src="img/menu-flower.png" alt="">
+                <img class="pc" src="img/menu-flower-pc.png" alt="">
                 <p class="menu__main--content--product-name">フラワーコーヒー</p>
                 <p class="menu__main--content--price">¥1,000</p>
             </div>
             <div class="menu__main--content">
-                <img src="" alt="">
+                <img class="sp" src="" alt="">
+                <img class="pc" src="" alt="">
                 <p class="menu__main--content--product-name"></p>
                 <p class="menu__main--content--price"></p>
             </div>
