add recruit.html for pc

--- a/recruit.html
+++ b/recruit.html
@@ -62,18 +62,20 @@
                 <div class="recruit__main--text">
                     <p class="recruit__main--text--title">応募資格</p>
                     <p class="recruit__main--text--content">
-                        性別・学歴不問<br><br>
-                        <ul>
-                            <li class="list-style-disc">お花が好きな人</li>
-                        </ul>
-                        <ul>
-                            <li class="list-style-circle">詳しくなくてもOKです。</li>
-                            <li class="list-style-circle">お花を育てた経験のある人歓迎</li>
-                        </ul>
-                        <ul>
-                            <li class="list-style-disc">コーヒーが好きな人</li>
-                            <li class="list-style-disc">お客様に素敵な時間を過ごしてほしいと思う人</li>
-                        </ul>
+                        <div>
+                            性別・学歴不問<br><br>
+                            <ul>
+                                <li class="list-style-disc">お花が好きな人</li>
+                            </ul>
+                            <ul>
+                                <li class="list-style-circle">詳しくなくてもOKです。</li>
+                                <li class="list-style-circle">お花を育てた経験のある人歓迎</li>
+                            </ul>
+                            <ul>
+                                <li class="list-style-disc">コーヒーが好きな人</li>
+                                <li class="list-style-disc">お客様に素敵な時間を過ごしてほしいと思う人</li>
+                            </ul>
+                        </div>
                     </p>
                 </div>
                 <div class="recruit__main--text">
