--- a/access.html
+++ b/access.html
@@ -19,16 +19,16 @@
                 <div class="menu-content">
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index.html" class="hover-opacity">Home</a>
                         </li>
                         <li>
-                            <a href="menu.html">Menu</a>
+                            <a href="menu.html" class="hover-opacity">Menu</a>
                         </li>
                         <li>
-                            <a href="access.html">Access</a>
+                            <a href="access.html" class="hover-opacity">Access</a>
                         </li>
                         <li>
-                            <a href="recruit.html">Recruit</a>
+                            <a href="recruit.html" class="hover-opacity">Recruit</a>
                         </li>
                     </ul>
                 </div>
