add hover-opacity to footer

--- a/menu.html
+++ b/menu.html
@@ -80,10 +80,10 @@
 
         <div class="footer">
             <div class="footer--contents">
-                <div class="footer--content footer--content1"><a href="index.html">Home</a></div>
-                <div class="footer--content footer--content2"><a href="menu.html">Menu</a></div>
-                <div class="footer--content footer--content3"><a href="access.html">Access</a></div>
-                <div class="footer--content footer--content4"><a href="recruit.html">Recruit</a></div>
+                <div class="footer--content footer--content1"><a class="hover-opacity" href="index.html">Home</a></div>
+                <div class="footer--content footer--content2"><a class="hover-opacity" href="menu.html">Menu</a></div>
+                <div class="footer--content footer--content3"><a class="hover-opacity" href="access.html">Access</a></div>
+                <div class="footer--content footer--content4"><a class="hover-opacity" href="recruit.html">Recruit</a></div>
             </div>
             <div class="footer--copyright">© FlowerCafe</div>
         </div>
