add animation slide-in

--- a/access.html
+++ b/access.html
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <div class="access__main">
+        <div class="access__main slide-in">
             <div class="access__main__texts">
                 <div class="access__main__text1 access__main__text">
                     <p>
