--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="top__main">
+        <div class="top__main slide-in">
             <div class="top__main--sentences">
                 <div class="top__main--sentence top__main--sentence1">
                     あのイーハトーヴォのすきとおった風、夏でも底に冷たさをもつ青いそら、
