--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="menu__main">
+        <div class="menu__main slide-in">
             <div class="menu__main--content">
                 <img class="sp" src="img/menu-coffee.png" alt="">
                 <img class="pc" src="img/menu-coffee-pc.png" alt="">
