--- a/recruit.html
+++ b/recruit.html
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <div class="recruit__main">
+        <div class="recruit__main slide-in">
             <h2 class="recruit__main__title">店舗スタッフ</h2>
             <div class="recruit__main--texts">
                 <div class="recruit__main--text">
